--- a/RetirementSimulator/App.xaml
+++ b/RetirementSimulator/App.xaml
@@ -1,8 +1,5 @@
-﻿<Application x:Class="RetirementSimulator.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<structureMap:PrismApplication
+    x:Class="RetirementSimulator.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:structureMap="http://prismlibrary.com/" />
