Completed the results view

--- a/RetirementSimulator/Views/ExpensesView.xaml
+++ b/RetirementSimulator/Views/ExpensesView.xaml
@@ -7,6 +7,8 @@
     xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:RetirementSimulator.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewModels:HomeViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
