--- a/RetirementSimulator/Views/HomeView.xaml
+++ b/RetirementSimulator/Views/HomeView.xaml
@@ -36,7 +36,7 @@
             <RowDefinition Height="8" />
             <RowDefinition />
             <RowDefinition Height="8" />
-            <RowDefinition />
+            <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
         <TextBlock
