--- a/RetirementSimulator/Views/ResultsView.xaml
+++ b/RetirementSimulator/Views/ResultsView.xaml
@@ -3,19 +3,59 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:GridSection.Controls;assembly=GridSection"
+    xmlns:converters="clr-namespace:RetirementSimulator.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
     xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:RetirementSimulator.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewModels:HomeViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
+    <UserControl.Resources>
+        <Style TargetType="{x:Type dxg:GridControl}">
+            <Setter Property="AutoGenerateColumns" Value="None" />
+            <Setter Property="EnableSmartColumnsGeneration" Value="True" />
+            <Setter Property="ColumnGeneratorTemplate">
+                <Setter.Value>
+                    <DataTemplate>
+                        <ContentControl>
+                            <dxg:GridColumn
+                                EditSettings="{Binding ., Converter={converters:FieldTypeToEditSettingsConverter}}"
+                                FieldName="{Binding (dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}"
+                                Fixed="{Binding (dxci:DependencyObjectExtensions.DataContext).FixedStyle, RelativeSource={RelativeSource Self}}"
+                                Header="{Binding (dxci:DependencyObjectExtensions.DataContext).Header, RelativeSource={RelativeSource Self}}" />
+                        </ContentControl>
+                    </DataTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
 
     <controls:GridSection>
         <controls:GridSection.Header>
             <controls:GridSectionHeader HorizontalContentAlignment="Right" Label="results" />
         </controls:GridSection.Header>
         <controls:GridSection.Content>
-            <dxg:GridControl />
+            <dxg:GridControl
+                AutoGenerateColumns="AddNew"
+                ColumnsSource="{Binding ResultColumns}"
+                ItemsSource="{Binding ResultRows}"
+                SelectionMode="Row">
+                <dxg:GridControl.View>
+                    <dxg:TableView NavigationStyle="Row" ShowGroupPanel="False">
+                        <dxg:TableView.FormatConditions>
+                            <dxg:FormatCondition
+                                ApplyToRow="True"
+                                FieldName="totalvalue"
+                                PredefinedFormatName="LightRedFill"
+                                Value1="0"
+                                ValueRule="LessOrEqual" />
+                        </dxg:TableView.FormatConditions>
+                    </dxg:TableView>
+                </dxg:GridControl.View>
+            </dxg:GridControl>
         </controls:GridSection.Content>
     </controls:GridSection>
 
