--- a/RetirementSimulator/Views/HomeView.xaml
+++ b/RetirementSimulator/Views/HomeView.xaml
@@ -32,29 +32,20 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="8" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="8" />
             <RowDefinition />
             <RowDefinition Height="8" />
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
 
-        <TextBlock
-            Grid.Row="0"
-            FontFamily="Segoe UI Light"
-            FontSize="28"
-            Opacity="0.6"
-            Text="retirement simulator" />
-
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="0">
             <controls:GridSection>
                 <controls:GridSection.Header>
-                    <controls:GridSectionHeader HorizontalContentAlignment="Right" Label="simulation">
+                    <controls:GridSectionHeader HorizontalContentAlignment="Right" Label="retirement simulator">
                         <controls:GridSectionHeader.Items>
                             <controls:GridSectionHeaderTextButton
                                 Command="{Binding NewSimulationCommand}"
                                 ShowBorder="False"
-                                Text="new" />
+                                Text="new simulation" />
                             <controls:GridSectionHeaderTextButton
                                 Command="{Binding ShowSettingsCommand}"
                                 ShowBorder="False"
@@ -63,21 +54,12 @@
                     </controls:GridSectionHeader>
                 </controls:GridSection.Header>
                 <controls:GridSection.Content>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <StackPanel Grid.Column="0" Orientation="Horizontal">
-                            <TextBlock Text="first year value:" />
-                            <TextBlock Margin="5,0,0,0" Text="{Binding Simulation.FirstYearValue}" />
-                        </StackPanel>
-                    </Grid>
+                    <Grid />
                 </controls:GridSection.Content>
             </controls:GridSection>
         </Grid>
 
-        <Grid Grid.Row="4">
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="4" />
@@ -90,7 +72,7 @@
             <Views:ExpensesView Grid.Column="4" />
         </Grid>
 
-        <Grid Grid.Row="6">
+        <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="4" />
@@ -102,7 +84,7 @@
 
         <dx:WaitIndicator
             Grid.Row="0"
-            Grid.RowSpan="7"
+            Grid.RowSpan="5"
             DeferedVisibility="{Binding IsBusy}" />
 
     </Grid>
